--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django>=2.2.5,<2.3.0
 djangorestframework>=3.10.2,<3.11.0
-psycopg2>=2.8.3,<2.9.0
+# psycopg2>=2.8.3,<2.9.0
+mysqlclient>=1.4.4,<1.5.0
 flake8>=3.7.8,<3.8.0
+django-mysql>=3.2.0,<3.3.0
